--- a/source/_posts/你好.md
+++ b/source/_posts/你好.md
@@ -4,3 +4,11 @@ tags: xiaohe
 ---
 ### 自我介绍
 你好呀
+
+### 在线图片
+
+<img src="https://vip2.loli.io/2021/07/15/Fnp2oXlbjwIqaJB.jpg"/>
+
+<code>
+var a = document.getElementById("div")
+</code>
